--- a/yaml_sample/info/info.yaml
+++ b/yaml_sample/info/info.yaml
@@ -1,4 +1,3 @@
 title: Sample API
-description:
-    Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/)
+description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/)
 version: 0.1.9
